# ratchada-utils

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  SECURITY.md  bump_version.py  catalog-info.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: black-formatter.yml  python-publish.yml  python_publish.yml
docs/: README.md  architecture.md  dataflow.md  deployment.md  development.md  troubleshooting.md
docs/features/: example.md  flexible_tokenization.md  simple_evaluation.md  text_tokenize.md
ratchada_utils/: VERSION.txt  __init__.py
ratchada_utils/evaluator/: __init__.py  evaluate_utils.py
ratchada_utils/processor/: __init__.py  _version.py  basic.py  english.py  postfix.py  process.py
