[metadata]
name = ratchada-utils
description = Ratchada Utils are Python package use with Ratchada Whisper model utilities.
long_description = file: README.md
long_description_content_type = text/markdown
author = tm-zoon
author_email = zoon_p@thinkingmachin.es
license = MIT
keywords = model, Ratchada-Whisper, tokenizing, language, natural language, text analytics
url = https://github.com/thinkingmachines/ratchada-utils
project_urls =
    Documentation = https://huggingface.co/ThinkingMachinesDataScience/Ratchada-Fang-Thon-Whisper
    Source Code = https://github.com/thinkingmachines/ratchada-utils
    Issue Tracker = https://github.com/thinkingmachines/ratchada-utils/issues

[options]
packages = find:
package_dir =
    = ratchada_utils
python_requires = >=3.10, <3.12

[options.packages.find]
where = ratchada_utils

[options.package_data]
* = VERSION

[options.extras_require]
docs =
    mkdocs~=1.4.0
    mkdocs-material~=8.5.4
    mkdocs-git-revision-date-localized-plugin~=1.1.0
    mkdocstrings[python]~=0.19.0
quality =
    black~=22.10.0
    mypy~=1.4.0
    pre-commit~=2.20.0
    ruff~=0.0.263
tests =
    pytest~=7.1.2
    pytest-cov~=4.1

[versioneer]
VCS = git
style = pep440
versionfile_source = ratchada_utils/_version.py
versionfile_build = ratchada_utils/_version.py
tag_prefix =
parentdir_prefix = ratchada-utils-


