[metadata]
name = ratchada-utils
version = 0.1.0
description = Ratchada Utils are Python package use with Ratchada Whisper model utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinkingmachines/ratchada-utils
author = tm-zoon
author_email = zoon_p@thinkingmachin.es
license = MIT

[options]
packages = find:
package_dir =
    = ratchada_utils
python_requires = >=3.10, <3.12

[options.extras_require]
testing =
    pytest ~= 7.1.2
    pytest-cov ~= 4.1
quality =
    black ~= 22.10.0
    mypy ~= 1.4.0
    pre-commit ~= 2.20.0
    ruff ~= 0.0.263

[bump]
input = some_directory/__file__.py
minor = true
patch = false
reset = true
